completed. ready for testing

--- a/src/i18n/locales/as.json
+++ b/src/i18n/locales/as.json
@@ -11,6 +11,8 @@
     "lightMode": "লাইট ম'ড",
     "preferredLanguage": "পছন্দৰ ভাষা",
     "feedback": "ফিডবেক",
+    "contactFeedback": "যোগাযোগ/ফিডবেক",
+    "aboutApp": "এই এপটোৰ বিষয়ে",
     "signOut": "ছাইন আউট",
     "logout": "লগআউট",
     "logoutConfirm": "আপুনি নিশ্চিতনে যে আপুনি লগআউট কৰিব বিচাৰে?",
@@ -22,7 +24,37 @@
     "submit": "দাখিল কৰক",
     "submitting": "দাখিল হৈ আছে...",
     "success": "আপোনাৰ ফিডবেকৰ বাবে ধন্যবাদ!",
-    "error": "ফিডবেক দাখিল কৰোতে ব্যৰ্থ। অনুগ্ৰহ কৰি আকৌ চেষ্টা কৰক।"
+    "error": "ফিডবেক দাখিল কৰোতে ব্যৰ্থ। অনুগ্ৰহ কৰি আকৌ চেষ্টা কৰক।",
+    "loginRequired": "ফিডবেক দাখিল কৰিবলৈ অনুগ্ৰহ কৰি লগইন কৰক"
+  },
+  "about": {
+    "title": "এই এপটোৰ বিষয়ে",
+    "appName": "সাই বাবা অলৌকিক ঘটনা",
+    "version": "সংস্কৰণ",
+    "tagline": "সাই ভক্তসকলৰ বাবে অলৌকিক ঘটনা আৰু অভিজ্ঞতা শ্বেয়াৰ কৰাৰ এটা সেৱা।",
+    "mission": {
+      "title": "মিছন",
+      "content": "এই এপটো সাই বাবা ভক্তসকলৰ বিশ্বব্যাপী সম্প্ৰদায়ৰ বাবে উৎসৰ্গিত এটা অ-বাণিজ্যিক, অ-লাভজনক প্ৰকল্প। আমাৰ লক্ষ্য হ'ল শ্ৰী সাইৰ লীলা (অলৌকিক ঘটনা) নথিভুক্ত আৰু শ্বেয়াৰ কৰাৰ বাবে এটা প্লেটফৰ্ম প্ৰদান কৰা।"
+    },
+    "credits": {
+      "title": "ক্ৰেডিট (উৎস সামগ্ৰী)",
+      "content": "শ্ৰী সাই সচ্চৰিত্ৰাৰ PDF সংস্কৰণসমূহ শিৰডিৰ শ্ৰী সাই বাবা সনস্থান ট্ৰাষ্টৰ দ্বাৰা প্ৰকাশিত সংস্কৰণসমূহৰ পৰা প্ৰাপ্ত। আমি মূল লেখক গোবিন্দ ৰঘুনাথ দাভোলকৰ (হেমাদপন্ত)ক ক্ৰেডিট দিওঁ।"
+    },
+    "noAds": {
+      "title": "নো-এডছ নীতি",
+      "content": "এই এপটো সম্পূৰ্ণৰূপে বিনামূলীয়া আৰু কোনো বিজ্ঞাপন চলোৱা নাই বা কোনো আয় উৎপাদন কৰা নাই। ই সম্পূৰ্ণৰূপে এটা ভক্তিমূলক সেৱা।"
+    },
+    "disclaimer": {
+      "title": "অস্বীকাৰ",
+      "content": "কিতাপসমূহৰ সকলো অধিকাৰ মূল প্ৰকাশকসকলৰ ওচৰত থাকে। যদি আপুনি কপিৰাইট ধাৰক আৰু উদ্বেগ আছে, অনুগ্ৰহ কৰি আমাক যোগাযোগ কৰক।"
+    }
+  },
+  "book": {
+    "title": "শ্ৰী সাই সচ্চৰিত্ৰা",
+    "loadingPdf": "PDF ল'ড হৈ আছে...",
+    "loadError": "PDF ল'ড কৰিবলৈ ব্যৰ্থ",
+    "loadErrorSubtext": "অনুগ্ৰহ কৰি নিশ্চিত কৰক যে PDF ফাইল আছে",
+    "disclaimer": "PDF সমূহ ভক্তিমূলক অধ্যয়নৰ বাবে প্ৰদান কৰা হৈছে। ক্ৰেডিট: শিৰডি শ্ৰী সাই বাবা সনস্থান ট্ৰাষ্ট। সম্পূৰ্ণ আইনী অস্বীকাৰৰ বাবে 'ছেটিংছ > এই এপটোৰ বিষয়ে' চাওক।"
   },
   "common": {
     "loading": "ল'ড হৈ আছে...",
