--- a/src/i18n/locales/bn.json
+++ b/src/i18n/locales/bn.json
@@ -11,6 +11,8 @@
     "lightMode": "লাইট মোড",
     "preferredLanguage": "পছন্দের ভাষা",
     "feedback": "মতামত",
+    "contactFeedback": "যোগাযোগ/মতামত",
+    "aboutApp": "এই অ্যাপ সম্পর্কে",
     "signOut": "সাইন আউট",
     "logout": "লগআউট",
     "logoutConfirm": "আপনি কি নিশ্চিত যে আপনি লগআউট করতে চান?",
@@ -22,7 +24,37 @@
     "submit": "জমা দিন",
     "submitting": "জমা দেওয়া হচ্ছে...",
     "success": "আপনার মতামতের জন্য ধন্যবাদ!",
-    "error": "মতামত জমা দেওয়া ব্যর্থ হয়েছে। অনুগ্রহ করে আবার চেষ্টা করুন।"
+    "error": "মতামত জমা দেওয়া ব্যর্থ হয়েছে। অনুগ্রহ করে আবার চেষ্টা করুন।",
+    "loginRequired": "মতামত জমা দেওয়ার জন্য অনুগ্রহ করে লগইন করুন"
+  },
+  "about": {
+    "title": "এই অ্যাপ সম্পর্কে",
+    "appName": "সাই বাবা অলৌকিক ঘটনা",
+    "version": "সংস্করণ",
+    "tagline": "সাই ভক্তদের জন্য অলৌকিক ঘটনা ও অভিজ্ঞতা শেয়ার করার একটি সেবা।",
+    "mission": {
+      "title": "মিশন",
+      "content": "এই অ্যাপটি সাই বাবা ভক্তদের বিশ্বব্যাপী সম্প্রদায়ের জন্য উৎসর্গীকৃত একটি অ-বাণিজ্যিক, অ-লাভজনক প্রকল্প। আমাদের লক্ষ্য হল শ্রী সাইয়ের লীলা (অলৌকিক ঘটনা) নথিভুক্ত এবং শেয়ার করার জন্য একটি প্ল্যাটফর্ম প্রদান করা।"
+    },
+    "credits": {
+      "title": "ক্রেডিট (উৎস উপাদান)",
+      "content": "শ্রী সাই সচ্চরিত্রার PDF সংস্করণগুলি শিরডির শ্রী সাই বাবা সনস্থান ট্রাস্ট দ্বারা প্রকাশিত সংস্করণ থেকে প্রাপ্ত। আমরা মূল লেখক গোবিন্দ রঘুনাথ দাভোলকর (হেমাদপন্ত) কে ক্রেডিট দিই।"
+    },
+    "noAds": {
+      "title": "নো-অ্যাডস নীতি",
+      "content": "এই অ্যাপটি সম্পূর্ণ বিনামূল্যে এবং কোনো বিজ্ঞাপন চালায় না বা কোনো আয় উৎপন্ন করে না। এটি সম্পূর্ণরূপে একটি ভক্তিমূলক সেবা।"
+    },
+    "disclaimer": {
+      "title": "অস্বীকার",
+      "content": "বইগুলির সমস্ত অধিকার মূল প্রকাশকদের কাছে থাকে। আপনি যদি কপিরাইট ধারক হন এবং উদ্বেগ থাকে, অনুগ্রহ করে আমাদের সাথে যোগাযোগ করুন।"
+    }
+  },
+  "book": {
+    "title": "শ্রী সাই সচ্চরিত্রা",
+    "loadingPdf": "PDF লোড হচ্ছে...",
+    "loadError": "PDF লোড করতে ব্যর্থ",
+    "loadErrorSubtext": "অনুগ্রহ করে নিশ্চিত করুন যে PDF ফাইলটি বিদ্যমান",
+    "disclaimer": "PDFগুলি ভক্তিমূলক অধ্যয়নের জন্য প্রদান করা হয়েছে। ক্রেডিট: শিরডি শ্রী সাই বাবা সনস্থান ট্রাস্ট। সম্পূর্ণ আইনি অস্বীকারের জন্য 'সেটিংস > এই অ্যাপ সম্পর্কে' দেখুন।"
   },
   "common": {
     "loading": "লোড হচ্ছে...",
