--- a/src/i18n/locales/gu.json
+++ b/src/i18n/locales/gu.json
@@ -11,6 +11,8 @@
     "lightMode": "લાઇટ મોડ",
     "preferredLanguage": "પ્રિફર્ડ ભાષા",
     "feedback": "પ્રતિસાદ",
+    "contactFeedback": "સંપર્ક/પ્રતિસાદ",
+    "aboutApp": "આ એપ વિશે",
     "signOut": "સાઇન આઉટ",
     "logout": "લોગઆઉટ",
     "logoutConfirm": "શું તમે ખરેખર લોગઆઉટ કરવા માંગો છો?",
@@ -22,7 +24,37 @@
     "submit": "સબમિટ કરો",
     "submitting": "સબમિટ થઈ રહ્યું છે...",
     "success": "તમારા પ્રતિસાદ માટે આભાર!",
-    "error": "પ્રતિસાદ સબમિટ કરવામાં નિષ્ફળ. કૃપા કરીને ફરી પ્રયાસ કરો."
+    "error": "પ્રતિસાદ સબમિટ કરવામાં નિષ્ફળ. કૃપા કરીને ફરી પ્રયાસ કરો.",
+    "loginRequired": "પ્રતિસાદ સબમિટ કરવા માટે કૃપા કરીને લોગઇન કરો"
+  },
+  "about": {
+    "title": "આ એપ વિશે",
+    "appName": "સાઈ બાબા ચમત્કારો",
+    "version": "સંસ્કરણ",
+    "tagline": "સાઈ ભક્તો માટે ચમત્કારો અને અનુભવો શેર કરવા માટે એક સેવા.",
+    "mission": {
+      "title": "મિશન",
+      "content": "આ એપ સાઈ બાબા ભક્તોના વૈશ્વિક સમુદાય માટે સમર્પિત એક બિન-વ્યાપારિક, બિન-લાભકારી પ્રોજેક્ટ છે. અમારો લક્ષ્ય શ્રી સાઈની લીલાઓ (ચમત્કારો) દસ્તાવેજીકરણ અને શેર કરવા માટે એક પ્લેટફોર્મ પ્રદાન કરવાનો છે."
+    },
+    "credits": {
+      "title": "ક્રેડિટ (સ્રોત સામગ્રી)",
+      "content": "શ્રી સાઈ સચ્ચરિત્રાના PDF સંસ્કરણો શિરડીના શ્રી સાઈ બાબા સંસ્થાન ટ્રસ્ટ દ્વારા પ્રકાશિત સંસ્કરણોમાંથી પ્રાપ્ત થયા છે. અમે મૂળ લેખક ગોવિંદ રઘુનાથ દાભોલકર (હેમાદપંત) ને ક્રેડિટ આપીએ છીએ."
+    },
+    "noAds": {
+      "title": "નો-એડ્સ પોલિસી",
+      "content": "આ એપ સંપૂર્ણપણે મફત છે અને કોઈપણ જાહેરાતો ચલાવતું નથી અથવા કોઈપણ આવક ઉત્પન્ન કરતું નથી. તે સંપૂર્ણપણે એક ભક્તિ સેવા છે."
+    },
+    "disclaimer": {
+      "title": "અસ્વીકરણ",
+      "content": "પુસ્તકોના તમામ અધિકારો મૂળ પ્રકાશકો પાસે રહે છે. જો તમે કોપીરાઇટ ધારક છો અને ચિંતાઓ છે, તો કૃપા કરીને અમારો સંપર્ક કરો."
+    }
+  },
+  "book": {
+    "title": "શ્રી સાઈ સચ્ચરિત્રા",
+    "loadingPdf": "PDF લોડ થઈ રહ્યું છે...",
+    "loadError": "PDF લોડ કરવામાં નિષ્ફળ",
+    "loadErrorSubtext": "કૃપા કરીને ખાતરી કરો કે PDF ફાઇલ અસ્તિત્વમાં છે",
+    "disclaimer": "PDF ભક્તિ અભ્યાસ માટે પ્રદાન કરવામાં આવ્યા છે. ક્રેડિટ: શિરડી શ્રી સાઈ બાબા સંસ્થાન ટ્રસ્ટ। સંપૂર્ણ કાનૂની અસ્વીકરણ માટે 'સેટિંગ્સ > આ એપ વિશે' જુઓ."
   },
   "common": {
     "loading": "લોડ થઈ રહ્યું છે...",
