--- a/src/i18n/locales/hi.json
+++ b/src/i18n/locales/hi.json
@@ -11,6 +11,8 @@
     "lightMode": "लाइट मोड",
     "preferredLanguage": "पसंदीदा भाषा",
     "feedback": "प्रतिक्रिया",
+    "contactFeedback": "संपर्क/प्रतिक्रिया",
+    "aboutApp": "इस ऐप के बारे में",
     "signOut": "साइन आउट",
     "logout": "लॉगआउट",
     "logoutConfirm": "क्या आप वाकई लॉगआउट करना चाहते हैं?",
@@ -22,7 +24,37 @@
     "submit": "सबमिट करें",
     "submitting": "सबमिट हो रहा है...",
     "success": "आपकी प्रतिक्रिया के लिए धन्यवाद!",
-    "error": "प्रतिक्रिया सबमिट करने में विफल। कृपया पुनः प्रयास करें।"
+    "error": "प्रतिक्रिया सबमिट करने में विफल। कृपया पुनः प्रयास करें।",
+    "loginRequired": "प्रतिक्रिया सबमिट करने के लिए कृपया लॉगिन करें"
+  },
+  "about": {
+    "title": "इस ऐप के बारे में",
+    "appName": "साई बाबा चमत्कार",
+    "version": "संस्करण",
+    "tagline": "साई भक्तों के लिए चमत्कार और अनुभव साझा करने का एक सेवा।",
+    "mission": {
+      "title": "मिशन",
+      "content": "यह ऐप साई बाबा भक्तों के वैश्विक समुदाय के लिए समर्पित एक गैर-व्यावसायिक, गैर-लाभकारी परियोजना है। हमारा लक्ष्य श्री साई की लीलाओं (चमत्कारों) को दस्तावेजीकृत करने और साझा करने के लिए एक मंच प्रदान करना है।"
+    },
+    "credits": {
+      "title": "क्रेडिट (स्रोत सामग्री)",
+      "content": "श्री साई सच्चरित्र के PDF संस्करण शिर्डी के श्री साई बाबा संस्थान ट्रस्ट द्वारा प्रकाशित संस्करणों से प्राप्त किए गए हैं। हम मूल लेखक गोविंद रघुनाथ दाभोलकर (हेमाडपंत) को श्रेय देते हैं।"
+    },
+    "noAds": {
+      "title": "नो-एड्स नीति",
+      "content": "यह ऐप पूरी तरह से मुफ्त है और कोई विज्ञापन नहीं चलाता या कोई राजस्व उत्पन्न नहीं करता। यह विशुद्ध रूप से एक भक्ति सेवा है।"
+    },
+    "disclaimer": {
+      "title": "अस्वीकरण",
+      "content": "पुस्तकों के सभी अधिकार मूल प्रकाशकों के पास रहते हैं। यदि आप एक कॉपीराइट धारक हैं और चिंताएं हैं, तो कृपया हमसे संपर्क करें।"
+    }
+  },
+  "book": {
+    "title": "श्री साई सच्चरित्र",
+    "loadingPdf": "PDF लोड हो रहा है...",
+    "loadError": "PDF लोड करने में विफल",
+    "loadErrorSubtext": "कृपया सुनिश्चित करें कि PDF फ़ाइल मौजूद है",
+    "disclaimer": "PDF भक्ति अध्ययन के लिए प्रदान किए गए हैं। क्रेडिट: शिर्डी श्री साई बाबा संस्थान ट्रस्ट। पूर्ण कानूनी अस्वीकरण के लिए 'सेटिंग्स > इस ऐप के बारे में' देखें।"
   },
   "common": {
     "loading": "लोड हो रहा है...",
