--- a/src/i18n/locales/kn.json
+++ b/src/i18n/locales/kn.json
@@ -11,6 +11,8 @@
     "lightMode": "ಲೈಟ್ ಮೋಡ್",
     "preferredLanguage": "ಆದ್ಯತೆಯ ಭಾಷೆ",
     "feedback": "ಪ್ರತಿಕ್ರಿಯೆ",
+    "contactFeedback": "ಸಂಪರ್ಕ/ಪ್ರತಿಕ್ರಿಯೆ",
+    "aboutApp": "ಈ ಅಪ್ಲಿಕೇಶನ್ ಬಗ್ಗೆ",
     "signOut": "ಸೈನ್ ಔಟ್",
     "logout": "ಲಾಗ್ ಔಟ್",
     "logoutConfirm": "ನೀವು ನಿಜವಾಗಿಯೂ ಲಾಗ್ ಔಟ್ ಮಾಡಲು ಬಯಸುತ್ತೀರಾ?",
@@ -22,7 +24,37 @@
     "submit": "ಸಲ್ಲಿಸಿ",
     "submitting": "ಸಲ್ಲಿಸಲಾಗುತ್ತಿದೆ...",
     "success": "ನಿಮ್ಮ ಪ್ರತಿಕ್ರಿಯೆಗೆ ಧನ್ಯವಾದಗಳು!",
-    "error": "ಪ್ರತಿಕ್ರಿಯೆಯನ್ನು ಸಲ್ಲಿಸಲು ವಿಫಲವಾಗಿದೆ. ದಯವಿಟ್ಟು ಮತ್ತೆ ಪ್ರಯತ್ನಿಸಿ."
+    "error": "ಪ್ರತಿಕ್ರಿಯೆಯನ್ನು ಸಲ್ಲಿಸಲು ವಿಫಲವಾಗಿದೆ. ದಯವಿಟ್ಟು ಮತ್ತೆ ಪ್ರಯತ್ನಿಸಿ.",
+    "loginRequired": "ಪ್ರತಿಕ್ರಿಯೆಯನ್ನು ಸಲ್ಲಿಸಲು ದಯವಿಟ್ಟು ಲಾಗಿನ್ ಮಾಡಿ"
+  },
+  "about": {
+    "title": "ಈ ಅಪ್ಲಿಕೇಶನ್ ಬಗ್ಗೆ",
+    "appName": "ಸಾಯಿ ಬಾಬಾ ಅದ್ಭುತಗಳು",
+    "version": "ಆವೃತ್ತಿ",
+    "tagline": "ಸಾಯಿ ಭಕ್ತರಿಗೆ ಅದ್ಭುತಗಳು ಮತ್ತು ಅನುಭವಗಳನ್ನು ಹಂಚಿಕೊಳ್ಳಲು ಒಂದು ಸೇವೆ.",
+    "mission": {
+      "title": "ಮಿಷನ್",
+      "content": "ಈ ಅಪ್ಲಿಕೇಶನ್ ಸಾಯಿ ಬಾಬಾ ಭಕ್ತರ ಜಾಗತಿಕ ಸಮುದಾಯಕ್ಕೆ ಸಮರ್ಪಿತವಾದ ಲಾಭರಹಿತ, ವಾಣಿಜ್ಯೇತರ ಯೋಜನೆಯಾಗಿದೆ. ಶ್ರೀ ಸಾಯಿಯ ಲೀಲೆಗಳನ್ನು (ಅದ್ಭುತಗಳು) ದಾಖಲಿಸಲು ಮತ್ತು ಹಂಚಿಕೊಳ್ಳಲು ಒಂದು ವೇದಿಕೆಯನ್ನು ಒದಗಿಸುವುದು ನಮ್ಮ ಗುರಿಯಾಗಿದೆ."
+    },
+    "credits": {
+      "title": "ಕ್ರೆಡಿಟ್ (ಮೂಲ ವಸ್ತು)",
+      "content": "ಶ್ರೀ ಸಾಯಿ ಸಚ್ಚರಿತ್ರೆಯ PDF ಆವೃತ್ತಿಗಳು ಶಿರ್ಡಿಯ ಶ್ರೀ ಸಾಯಿ ಬಾಬಾ ಸಂಸ್ಥಾನ್ ಟ್ರಸ್ಟ್ ಪ್ರಕಟಿಸಿದ ಆವೃತ್ತಿಗಳಿಂದ ಪಡೆಯಲಾಗಿದೆ. ನಾವು ಮೂಲ ಲೇಖಕ ಗೋವಿಂದ ರಘುನಾಥ್ ದಾಭೋಲ್ಕರ್ (ಹೇಮಾಡ್ಪಂತ್) ಅವರಿಗೆ ಕ್ರೆಡಿಟ್ ನೀಡುತ್ತೇವೆ."
+    },
+    "noAds": {
+      "title": "ನೋ-ಅಡ್ಸ್ ನೀತಿ",
+      "content": "ಈ ಅಪ್ಲಿಕೇಶನ್ ಸಂಪೂರ್ಣವಾಗಿ ಉಚಿತವಾಗಿದೆ ಮತ್ತು ಯಾವುದೇ ಜಾಹೀರಾತುಗಳನ್ನು ಚಲಾಯಿಸುವುದಿಲ್ಲ ಅಥವಾ ಯಾವುದೇ ಆದಾಯವನ್ನು ಉತ್ಪಾದಿಸುವುದಿಲ್ಲ. ಇದು ಸಂಪೂರ್ಣವಾಗಿ ಭಕ್ತಿ ಸೇವೆಯಾಗಿದೆ."
+    },
+    "disclaimer": {
+      "title": "ನಿರಾಕರಣೆ",
+      "content": "ಪುಸ್ತಕಗಳ ಎಲ್ಲಾ ಹಕ್ಕುಗಳು ಮೂಲ ಪ್ರಕಾಶಕರಿಗೆ ಸೇರಿವೆ. ನೀವು ಕೃತಿಸ್ವಾಮ್ಯ ಹೊಂದಿದ್ದರೆ ಮತ್ತು ಕಾಳಜಿಗಳು ಇದ್ದರೆ, ದಯವಿಟ್ಟು ನಮ್ಮನ್ನು ಸಂಪರ್ಕಿಸಿ."
+    }
+  },
+  "book": {
+    "title": "ಶ್ರೀ ಸಾಯಿ ಸಚ್ಚರಿತ್ರೆ",
+    "loadingPdf": "PDF ಲೋಡ್ ಆಗುತ್ತಿದೆ...",
+    "loadError": "PDF ಲೋಡ್ ಮಾಡಲು ವಿಫಲವಾಗಿದೆ",
+    "loadErrorSubtext": "ದಯವಿಟ್ಟು PDF ಫೈಲ್ ಅಸ್ತಿತ್ವದಲ್ಲಿದೆ ಎಂದು ಖಚಿತಪಡಿಸಿಕೊಳ್ಳಿ",
+    "disclaimer": "PDF ಗಳು ಭಕ್ತಿ ಅಧ್ಯಯನಕ್ಕಾಗಿ ಒದಗಿಸಲಾಗಿದೆ. ಕ್ರೆಡಿಟ್: ಶಿರ್ಡಿ ಶ್ರೀ ಸಾಯಿ ಬಾಬಾ ಸಂಸ್ಥಾನ್ ಟ್ರಸ್ಟ್। ಸಂಪೂರ್ಣ ಕಾನೂನು ನಿರಾಕರಣೆಗಾಗಿ 'ಸೆಟ್ಟಿಂಗ್ಗಳು > ಈ ಅಪ್ಲಿಕೇಶನ್ ಬಗ್ಗೆ' ನೋಡಿ."
   },
   "common": {
     "loading": "ಲೋಡ್ ಆಗುತ್ತಿದೆ...",
