--- a/src/i18n/locales/kok.json
+++ b/src/i18n/locales/kok.json
@@ -11,6 +11,8 @@
     "lightMode": "लाइट मोड",
     "preferredLanguage": "आवडीची भास",
     "feedback": "प्रतिक्रिया",
+    "contactFeedback": "संपर्क/प्रतिक्रिया",
+    "aboutApp": "ह्या ऍप बद्दल",
     "signOut": "साइन आउट",
     "logout": "लॉगआउट",
     "logoutConfirm": "तुमी खरेंच लॉगआउट करूंक इत्सिता?",
@@ -22,7 +24,37 @@
     "submit": "सबमिट करात",
     "submitting": "सबमिट जाता...",
     "success": "तुमच्या प्रतिक्रिये खातीर आभार!",
-    "error": "प्रतिक्रिया सबमिट करपांत अपयशी. कृपया परत यत्न करात."
+    "error": "प्रतिक्रिया सबमिट करपांत अपयशी. कृपया परत यत्न करात.",
+    "loginRequired": "प्रतिक्रिया सबमिट करपा खातीर कृपया लॉगिन करात"
+  },
+  "about": {
+    "title": "ह्या ऍप बद्दल",
+    "appName": "साई बाबा चमत्कार",
+    "version": "आवृत्ती",
+    "tagline": "साई भक्तां खातीर चमत्कार आनी अनुभव वाटून घेवपाची एक सेवा.",
+    "mission": {
+      "title": "मिशन",
+      "content": "ही ऍप साई बाबा भक्तांच्या जागतिक समुदाया खातीर समर्पित एक नॉन-कॉमर्सियल, नॉन-प्रॉफिट प्रोजेक्ट आसा. श्री साईच्या लीला (चमत्कार) दस्तावेजीकरण आनी वाटून घेवपा खातीर एक प्लॅटफॉर्म दिवप हें आमचें ध्येय आसा."
+    },
+    "credits": {
+      "title": "क्रेडिट (स्रोत सामग्री)",
+      "content": "श्री साई सच्चरित्राच्या PDF आवृत्त्यो शिर्डीच्या श्री साई बाबा संस्थान ट्रस्ट द्वारा प्रकाशित आवृत्त्यांतल्यान मेळयल्यात. आमी मूळ लेखक गोविंद रघुनाथ दाभोलकर (हेमाडपंत) कांय क्रेडिट दितात."
+    },
+    "noAds": {
+      "title": "नो-एड्स पॉलिसी",
+      "content": "ही ऍप पुरायपणान विनामूल्य आसा आनी कसलीय जाहिराती चालयना वा कसलीय उत्पन्न निर्माण करिना. ही पुरायपणान एक भक्ति सेवा आसा."
+    },
+    "disclaimer": {
+      "title": "अस्वीकरण",
+      "content": "पुस्तकांचे सगळे हक्क मूळ प्रकाशकांकडे रावतात. जर तुमी कॉपीराइट धारक आसात आनी काळजी आसा, तर कृपया आमकां संपर्क साधात."
+    }
+  },
+  "book": {
+    "title": "श्री साई सच्चरित्रा",
+    "loadingPdf": "PDF लोड जाता...",
+    "loadError": "PDF लोड करपांत अपयशी",
+    "loadErrorSubtext": "कृपया PDF फाइल अस्तित्वांत आसा हाची खात्री करात",
+    "disclaimer": "PDF भक्ति अभ्यासा खातीर दिल्यात. क्रेडिट: शिर्डी श्री साई बाबा संस्थान ट्रस्ट। पुराय कायदेशीर अस्वीकरणा खातीर 'सेटिंग > ह्या ऍप बद्दल' पळयात."
   },
   "common": {
     "loading": "लोड जाता...",
