--- a/src/i18n/locales/ml.json
+++ b/src/i18n/locales/ml.json
@@ -11,6 +11,8 @@
     "lightMode": "ലൈറ്റ് മോഡ്",
     "preferredLanguage": "പ്രിയപ്പെട്ട ഭാഷ",
     "feedback": "ഫീഡ്‌ബാക്ക്",
+    "contactFeedback": "ബന്ധപ്പെടുക/ഫീഡ്‌ബാക്ക്",
+    "aboutApp": "ഈ ആപ്പിനെക്കുറിച്ച്",
     "signOut": "സൈൻ ഔട്ട്",
     "logout": "ലോഗ്‌ഔട്ട്",
     "logoutConfirm": "നിങ്ങൾക്ക് ഉറപ്പാണോ ലോഗ്‌ഔട്ട് ചെയ്യാൻ?",
@@ -22,7 +24,37 @@
     "submit": "സമർപ്പിക്കുക",
     "submitting": "സമർപ്പിക്കുന്നു...",
     "success": "നിങ്ങളുടെ ഫീഡ്‌ബാക്കിന് നന്ദി!",
-    "error": "ഫീഡ്‌ബാക്ക് സമർപ്പിക്കുന്നതിൽ പരാജയപ്പെട്ടു. ദയവായി വീണ്ടും ശ്രമിക്കുക."
+    "error": "ഫീഡ്‌ബാക്ക് സമർപ്പിക്കുന്നതിൽ പരാജയപ്പെട്ടു. ദയവായി വീണ്ടും ശ്രമിക്കുക.",
+    "loginRequired": "ഫീഡ്‌ബാക്ക് സമർപ്പിക്കാൻ ദയവായി ലോഗിൻ ചെയ്യുക"
+  },
+  "about": {
+    "title": "ഈ ആപ്പിനെക്കുറിച്ച്",
+    "appName": "സായി ബാബാ അത്ഭുതങ്ങൾ",
+    "version": "പതിപ്പ്",
+    "tagline": "സായി ഭക്തർക്ക് അത്ഭുതങ്ങളും അനുഭവങ്ങളും പങ്കിടാനുള്ള ഒരു സേവ.",
+    "mission": {
+      "title": "മിഷൻ",
+      "content": "ഈ ആപ്പ് സായി ബാബാ ഭക്തരുടെ ആഗോള സമൂഹത്തിനായി സമർപ്പിച്ച ഒരു നോൺ-കൊമേഴ്‌ഷ്യൽ, നോൺ-പ്രോഫിറ്റ് പ്രോജക്റ്റാണ്. ശ്രീ സായിയുടെ ലീലകൾ (അത്ഭുതങ്ങൾ) രേഖപ്പെടുത്താനും പങ്കിടാനും ഒരു പ്ലാറ്റ്‌ഫോം നൽകുക എന്നതാണ് ഞങ്ങളുടെ ലക്ഷ്യം."
+    },
+    "credits": {
+      "title": "ക്രെഡിറ്റ് (സ്രോതസ്സ് മെറ്റീരിയൽ)",
+      "content": "ശ്രീ സായി സച്ചരിത്രയുടെ PDF പതിപ്പുകൾ ഷിർഡിയിലെ ശ്രീ സായി ബാബാ സംസ്ഥാന് ട്രസ്റ്റ് പ്രസിദ്ധീകരിച്ച പതിപ്പുകളിൽ നിന്ന് ലഭിച്ചതാണ്. ഞങ്ങൾ യഥാർത്ഥ രചയിതാവ് ഗോവിന്ദ് രഘുനാഥ് ദാഭോൽകർ (ഹേമാദ്പന്ത്) എന്നയാൾക്ക് ക്രെഡിറ്റ് നൽകുന്നു."
+    },
+    "noAds": {
+      "title": "നോ-അഡ്‌സ് പോളിസി",
+      "content": "ഈ ആപ്പ് പൂർണ്ണമായും സൗജന്യമാണ്, ഒരു പരസ്യവും പ്രവർത്തിപ്പിക്കുന്നില്ല അല്ലെങ്കിൽ വരുമാനം ഉണ്ടാക്കുന്നില്ല. ഇത് പൂർണ്ണമായും ഒരു ഭക്തി സേവയാണ്."
+    },
+    "disclaimer": {
+      "title": "നിരസനം",
+      "content": "പുസ്തകങ്ങളുടെ എല്ലാ അവകാശങ്ങളും യഥാർത്ഥ പ്രസാധകർക്ക് അവശേഷിക്കുന്നു. നിങ്ങൾ കോപ്പിറൈറ്റ് ഉടമയാണെങ്കിലും ആശങ്കകൾ ഉണ്ടെങ്കിൽ, ദയവായി ഞങ്ങളെ ബന്ധപ്പെടുക."
+    }
+  },
+  "book": {
+    "title": "ശ്രീ സായി സച്ചരിത്ര",
+    "loadingPdf": "PDF ലോഡ് ചെയ്യുന്നു...",
+    "loadError": "PDF ലോഡ് ചെയ്യാൻ പരാജയപ്പെട്ടു",
+    "loadErrorSubtext": "ദയവായി PDF ഫയൽ നിലവിലുണ്ടെന്ന് ഉറപ്പാക്കുക",
+    "disclaimer": "PDF-കൾ ഭക്തി പഠനത്തിനായി നൽകിയിരിക്കുന്നു. ക്രെഡിറ്റ്: ഷിർഡി ശ്രീ സായി ബാബാ സംസ്ഥാന് ട്രസ്റ്റ്। പൂർണ്ണ നിയമ നിരസനത്തിനായി 'ക്രമീകരണങ്ങൾ > ഈ ആപ്പിനെക്കുറിച്ച്' കാണുക."
   },
   "common": {
     "loading": "ലോഡ് ചെയ്യുന്നു...",
