--- a/src/i18n/locales/mr.json
+++ b/src/i18n/locales/mr.json
@@ -11,6 +11,8 @@
     "lightMode": "लाइट मोड",
     "preferredLanguage": "पसंतीची भाषा",
     "feedback": "अभिप्राय",
+    "contactFeedback": "संपर्क/अभिप्राय",
+    "aboutApp": "या अॅप बद्दल",
     "signOut": "साइन आउट",
     "logout": "लॉगआउट",
     "logoutConfirm": "तुम्हाला खात्री आहे की तुम्ही लॉगआउट करू इच्छिता?",
@@ -22,7 +24,37 @@
     "submit": "सबमिट करा",
     "submitting": "सबमिट होत आहे...",
     "success": "आपल्या अभिप्रायाबद्दल धन्यवाद!",
-    "error": "अभिप्राय सबमिट करण्यात अयशस्वी. कृपया पुन्हा प्रयत्न करा."
+    "error": "अभिप्राय सबमिट करण्यात अयशस्वी. कृपया पुन्हा प्रयत्न करा.",
+    "loginRequired": "अभिप्राय सबमिट करण्यासाठी कृपया लॉगिन करा"
+  },
+  "about": {
+    "title": "या अॅप बद्दल",
+    "appName": "साई बाबा चमत्कार",
+    "version": "आवृत्ती",
+    "tagline": "साई भक्तांसाठी चमत्कार आणि अनुभव शेअर करण्यासाठी एक सेवा.",
+    "mission": {
+      "title": "मिशन",
+      "content": "हे अॅप साई बाबा भक्तांच्या जागतिक समुदायासाठी समर्पित एक नॉन-कॉमर्सियल, नॉन-प्रॉफिट प्रोजेक्ट आहे. श्री साईच्या लीला (चमत्कार) दस्तऐवजीकरण आणि शेअर करण्यासाठी एक प्लॅटफॉर्म प्रदान करणे हे आमचे ध्येय आहे."
+    },
+    "credits": {
+      "title": "क्रेडिट (स्रोत सामग्री)",
+      "content": "श्री साई सच्चरित्राच्या PDF आवृत्त्या शिर्डीच्या श्री साई बाबा संस्थान ट्रस्ट द्वारे प्रकाशित आवृत्त्यांमधून प्राप्त केल्या आहेत. आम्ही मूळ लेखक गोविंद रघुनाथ दाभोलकर (हेमाडपंत) यांना क्रेडिट देतो."
+    },
+    "noAds": {
+      "title": "नो-एड्स पॉलिसी",
+      "content": "हे अॅप पूर्णपणे विनामूल्य आहे आणि कोणतीही जाहिराती चालवत नाही किंवा कोणताही उत्पन्न निर्माण करत नाही. ही पूर्णपणे एक भक्ती सेवा आहे."
+    },
+    "disclaimer": {
+      "title": "नकार",
+      "content": "पुस्तकांचे सर्व हक्क मूळ प्रकाशकांकडे राहतात. जर तुम्ही कॉपीराइट धारक असाल आणि काळजी असतील, तर कृपया आमच्याशी संपर्क साधा."
+    }
+  },
+  "book": {
+    "title": "श्री साई सच्चरित्रा",
+    "loadingPdf": "PDF लोड होत आहे...",
+    "loadError": "PDF लोड करण्यात अयशस्वी",
+    "loadErrorSubtext": "कृपया PDF फाइल अस्तित्वात आहे याची खात्री करा",
+    "disclaimer": "PDF भक्ती अभ्यासासाठी प्रदान केले आहेत. क्रेडिट: शिर्डी श्री साई बाबा संस्थान ट्रस्ट। संपूर्ण कायदेशीर नकारासाठी 'सेटिंग्ज > या अॅप बद्दल' पहा."
   },
   "common": {
     "loading": "लोड होत आहे...",
