--- a/src/i18n/locales/ne.json
+++ b/src/i18n/locales/ne.json
@@ -11,6 +11,8 @@
     "lightMode": "लाइट मोड",
     "preferredLanguage": "मनपर्ने भाषा",
     "feedback": "प्रतिक्रिया",
+    "contactFeedback": "सम्पर्क/प्रतिक्रिया",
+    "aboutApp": "यो एप बारे",
     "signOut": "साइन आउट",
     "logout": "लगआउट",
     "logoutConfirm": "के तपाईं वास्तवमा लगआउट गर्न चाहनुहुन्छ?",
@@ -22,7 +24,37 @@
     "submit": "पेश गर्नुहोस्",
     "submitting": "पेश गरिँदैछ...",
     "success": "तपाईंको प्रतिक्रियाको लागि धन्यवाद!",
-    "error": "प्रतिक्रिया पेश गर्न असफल। कृपया पुनः प्रयास गर्नुहोस्।"
+    "error": "प्रतिक्रिया पेश गर्न असफल। कृपया पुनः प्रयास गर्नुहोस्।",
+    "loginRequired": "प्रतिक्रिया पेश गर्न कृपया लगइन गर्नुहोस्"
+  },
+  "about": {
+    "title": "यो एप बारे",
+    "appName": "साई बाबा चमत्कार",
+    "version": "संस्करण",
+    "tagline": "साई भक्तहरूका लागि चमत्कार र अनुभव साझा गर्न एक सेवा।",
+    "mission": {
+      "title": "मिशन",
+      "content": "यो एप साई बाबा भक्तहरूको वैश्विक समुदायका लागि समर्पित एक गैर-व्यावसायिक, गैर-लाभकारी परियोजना हो। हाम्रो लक्ष्य श्री साईका लीलाहरू (चमत्कार) कागजातीकरण र साझा गर्न एक प्लेटफर्म प्रदान गर्नु हो।"
+    },
+    "credits": {
+      "title": "क्रेडिट (स्रोत सामग्री)",
+      "content": "श्री साई सच्चरित्रका PDF संस्करणहरू शिर्डीको श्री साई बाबा संस्थान ट्रस्ट द्वारा प्रकाशित संस्करणहरूबाट प्राप्त गरिएको छ। हामी मूल लेखक गोविन्द रघुनाथ दाभोलकर (हेमाडपन्त)लाई क्रेडिट दिन्छौं।"
+    },
+    "noAds": {
+      "title": "नो-एड्स नीति",
+      "content": "यो एप पूर्ण रूपमा निःशुल्क छ र कुनै विज्ञापन चलाउँदैन वा कुनै आय उत्पादन गर्दैन। यो पूर्ण रूपमा एक भक्ति सेवा हो।"
+    },
+    "disclaimer": {
+      "title": "अस्वीकरण",
+      "content": "पुस्तकहरूका सबै अधिकार मूल प्रकाशकहरूसँग रहन्छन्। यदि तपाईं कपिराइट धारक हुनुहुन्छ र चिन्ताहरू छन्, कृपया हामीलाई सम्पर्क गर्नुहोस्।"
+    }
+  },
+  "book": {
+    "title": "श्री साई सच्चरित्र",
+    "loadingPdf": "PDF लोड हुँदैछ...",
+    "loadError": "PDF लोड गर्न असफल",
+    "loadErrorSubtext": "कृपया PDF फाइल अवस्थित छ भन्ने निश्चित गर्नुहोस्",
+    "disclaimer": "PDF भक्ति अध्ययनका लागि प्रदान गरिएको छ। क्रेडिट: शिर्डी श्री साई बाबा संस्थान ट्रस्ट। पूर्ण कानूनी अस्वीकरणका लागि 'सेटिङहरू > यो एप बारे' हेर्नुहोस्।"
   },
   "common": {
     "loading": "लोड हुँदैछ...",
