--- a/src/i18n/locales/or.json
+++ b/src/i18n/locales/or.json
@@ -11,6 +11,8 @@
     "lightMode": "ଲାଇଟ୍ ମୋଡ୍",
     "preferredLanguage": "ପସନ୍ଦିତ ଭାଷା",
     "feedback": "ଫିଡବ୍ୟାକ୍",
+    "contactFeedback": "ଯୋଗାଯୋଗ/ଫିଡବ୍ୟାକ୍",
+    "aboutApp": "ଏହି ଆପ୍ ବିଷୟରେ",
     "signOut": "ସାଇନ୍ ଆଉଟ୍",
     "logout": "ଲଗଆଉଟ୍",
     "logoutConfirm": "ଆପଣ ନିଶ୍ଚିତ ଯେ ଆପଣ ଲଗଆଉଟ୍ କରିବାକୁ ଚାହୁଁଛନ୍ତି?",
@@ -22,7 +24,37 @@
     "submit": "ଦାଖଲ କରନ୍ତୁ",
     "submitting": "ଦାଖଲ ହେଉଛି...",
     "success": "ଆପଣଙ୍କ ଫିଡବ୍ୟାକ୍ ପାଇଁ ଧନ୍ୟବାଦ!",
-    "error": "ଫିଡବ୍ୟାକ୍ ଦାଖଲ କରିବାରେ ବିଫଳ। ଦୟାକରି ପୁନର୍ବାର ଚେଷ୍ଟା କରନ୍ତୁ।"
+    "error": "ଫିଡବ୍ୟାକ୍ ଦାଖଲ କରିବାରେ ବିଫଳ। ଦୟାକରି ପୁନର୍ବାର ଚେଷ୍ଟା କରନ୍ତୁ।",
+    "loginRequired": "ଫିଡବ୍ୟାକ୍ ଦାଖଲ କରିବା ପାଇଁ ଦୟାକରି ଲଗଇନ୍ କରନ୍ତୁ"
+  },
+  "about": {
+    "title": "ଏହି ଆପ୍ ବିଷୟରେ",
+    "appName": "ସାଇ ବାବା ଅଦ୍ଭୁତ",
+    "version": "ସଂସ୍କରଣ",
+    "tagline": "ସାଇ ଭକ୍ତମାନଙ୍କ ପାଇଁ ଅଦ୍ଭୁତ ଏବଂ ଅନୁଭବ ଅଂଶୀଦାର କରିବା ପାଇଁ ଏକ ସେବା।",
+    "mission": {
+      "title": "ମିଶନ",
+      "content": "ଏହି ଆପ୍ ସାଇ ବାବା ଭକ୍ତମାନଙ୍କର ବିଶ୍ୱବ୍ୟାପୀ ସମ୍ପ୍ରଦାୟ ପାଇଁ ସମର୍ପିତ ଏକ ଅବାଣିଜ୍ୟିକ, ଅଲାଭକାରୀ ପ୍ରକଳ୍ପ। ଶ୍ରୀ ସାଇଙ୍କ ଲୀଳା (ଅଦ୍ଭୁତ) ଦସ୍ତାବିଜ କରିବା ଏବଂ ଅଂଶୀଦାର କରିବା ପାଇଁ ଏକ ପ୍ଲାଟଫର୍ମ ପ୍ରଦାନ କରିବା ଆମର ଲକ୍ଷ୍ୟ।"
+    },
+    "credits": {
+      "title": "କ୍ରେଡିଟ୍ (ଉତ୍ସ ସାମଗ୍ରୀ)",
+      "content": "ଶ୍ରୀ ସାଇ ସଚ୍ଚରିତ୍ରର PDF ସଂସ୍କରଣଗୁଡ଼ିକ ଶିରଡିର ଶ୍ରୀ ସାଇ ବାବା ସଂସ୍ଥାନ ଟ୍ରଷ୍ଟ ଦ୍ୱାରା ପ୍ରକାଶିତ ସଂସ୍କରଣଗୁଡ଼ିକରୁ ପ୍ରାପ୍ତ ହୋଇଛି। ଆମେ ମୂଳ ଲେଖକ ଗୋବିନ୍ଦ ରଘୁନାଥ ଦାଭୋଲକର (ହେମାଦପନ୍ତ)ଙ୍କୁ କ୍ରେଡିଟ୍ ଦେଉଛୁ।"
+    },
+    "noAds": {
+      "title": "ନୋ-ଏଡସ୍ ନୀତି",
+      "content": "ଏହି ଆପ୍ ସମ୍ପୂର୍ଣ୍ଣ ମାଗଣା ଏବଂ କୌଣସି ବିଜ୍ଞାପନ ଚଳାଏ ନାହିଁ କିମ୍ବା କୌଣସି ଆୟ ସୃଷ୍ଟି କରେ ନାହିଁ। ଏହା ସମ୍ପୂର୍ଣ୍ଣରୂପେ ଏକ ଭକ୍ତି ସେବା।"
+    },
+    "disclaimer": {
+      "title": "ଅସ୍ୱୀକାର",
+      "content": "ପୁସ୍ତକଗୁଡ଼ିକର ସମସ୍ତ ଅଧିକାର ମୂଳ ପ୍ରକାଶକମାନଙ୍କ ପାଖରେ ରହିଛି। ଯଦି ଆପଣ ଏକ କପିରାଇଟ୍ ଧାରକ ଏବଂ ଚିନ୍ତା ଅଛି, ଦୟାକରି ଆମ ସହିତ ଯୋଗାଯୋଗ କରନ୍ତୁ।"
+    }
+  },
+  "book": {
+    "title": "ଶ୍ରୀ ସାଇ ସଚ୍ଚରିତ୍ର",
+    "loadingPdf": "PDF ଲୋଡ୍ ହେଉଛି...",
+    "loadError": "PDF ଲୋଡ୍ କରିବାରେ ବିଫଳ",
+    "loadErrorSubtext": "ଦୟାକରି ନିଶ୍ଚିତ କରନ୍ତୁ ଯେ PDF ଫାଇଲ୍ ଅଛି",
+    "disclaimer": "PDF ଗୁଡ଼ିକ ଭକ୍ତି ଅଧ୍ୟୟନ ପାଇଁ ପ୍ରଦାନ କରାଯାଇଛି। କ୍ରେଡିଟ୍: ଶିରଡି ଶ୍ରୀ ସାଇ ବାବା ସଂସ୍ଥାନ ଟ୍ରଷ୍ଟ। ସମ୍ପୂର୍ଣ୍ଣ ଆଇନଗତ ଅସ୍ୱୀକାର ପାଇଁ 'ସେଟିଂସ୍ > ଏହି ଆପ୍ ବିଷୟରେ' ଦେଖନ୍ତୁ।"
   },
   "common": {
     "loading": "ଲୋଡ୍ ହେଉଛି...",
