--- a/src/i18n/locales/sa.json
+++ b/src/i18n/locales/sa.json
@@ -11,6 +11,8 @@
     "lightMode": "प्रकाशप्रकारः",
     "preferredLanguage": "इष्टभाषा",
     "feedback": "प्रतिपुष्टिः",
+    "contactFeedback": "सम्पर्कः/प्रतिपुष्टिः",
+    "aboutApp": "अस्य अनुप्रयोगस्य विषये",
     "signOut": "निर्गमनम्",
     "logout": "निर्गमनम्",
     "logoutConfirm": "किं भवान् निश्चितः यत् निर्गन्तुम् इच्छति?",
@@ -22,7 +24,37 @@
     "submit": "प्रेषयतु",
     "submitting": "प्रेष्यते...",
     "success": "भवतः प्रतिपुष्टेः धन्यवादः!",
-    "error": "प्रतिपुष्टिं प्रेषयितुं असफलः। कृपया पुनः प्रयत्नं कुर्यात्।"
+    "error": "प्रतिपुष्टिं प्रेषयितुं असफलः। कृपया पुनः प्रयत्नं कुर्यात्।",
+    "loginRequired": "प्रतिपुष्टिं प्रेषयितुं कृपया प्रवेशं कुर्यात्"
+  },
+  "about": {
+    "title": "अस्य अनुप्रयोगस्य विषये",
+    "appName": "साई बाबा चमत्काराः",
+    "version": "संस्करणम्",
+    "tagline": "साई भक्तानां चमत्कारान् अनुभवान् च साझा कर्तुं सेवा।",
+    "mission": {
+      "title": "लक्ष्यम्",
+      "content": "अयम् अनुप्रयोगः साई बाबा भक्तानां वैश्विकसमुदायाय समर्पितः अव्यावसायिकः, अलाभकारीः परियोजना अस्ति। अस्माकं लक्ष्यं श्री साईस्य लीलानां (चमत्काराणां) दस्तावेजीकरणं साझाकरणं च कर्तुं मञ्चं प्रदातुं अस्ति।"
+    },
+    "credits": {
+      "title": "क्रेडिट् (स्रोतसामग्री)",
+      "content": "श्री साई सच्चरित्रस्य PDF संस्करणानि शिर्डीस्थस्य श्री साई बाबा संस्थान ट्रस्ट द्वारा प्रकाशितानि संस्करणेभ्यः प्राप्तानि। वयं मूललेखकं गोविन्दं रघुनाथं दाभोल्करं (हेमाद्पन्तं) क्रेडिट् दद्मः।"
+    },
+    "noAds": {
+      "title": "नो-एड्स् नीतिः",
+      "content": "अयम् अनुप्रयोगः सम्पूर्णतया निःशुल्कः अस्ति च कानिचित् विज्ञापनानि न चालयति न वा कानिचित् आयानि उत्पादयति। एतत् सम्पूर्णतया भक्तिसेवा अस्ति।"
+    },
+    "disclaimer": {
+      "title": "अस्वीकरणम्",
+      "content": "पुस्तकानां सर्वाणि अधिकाराणि मूलप्रकाशकानां पासे एव स्थितानि। यदि भवान् कॉपीराइट धारकः अस्ति च चिन्ताः सन्ति, कृपया अस्मान् सम्पर्कं कुर्यात्।"
+    }
+  },
+  "book": {
+    "title": "श्री साई सच्चरित्र",
+    "loadingPdf": "PDF लोड् भवति...",
+    "loadError": "PDF लोड् कर्तुं असफलः",
+    "loadErrorSubtext": "कृपया निश्चितं कुर्यात् यत् PDF फाइल् अस्ति",
+    "disclaimer": "PDF भक्त्यध्ययनाय प्रदत्तानि। क्रेडिट्: शिर्डी श्री साई बाबा संस्थान ट्रस्ट। सम्पूर्णवैधानिकास्वीकरणाय 'सेटिङ्ग्स् > अस्य अनुप्रयोगस्य विषये' पश्यतु।"
   },
   "common": {
     "loading": "लोड् भवति...",
