--- a/src/i18n/locales/si.json
+++ b/src/i18n/locales/si.json
@@ -11,6 +11,8 @@
     "lightMode": "ආලෝක ප්‍රකාරය",
     "preferredLanguage": "වඩාත් කැමති භාෂාව",
     "feedback": "ප්‍රතිපෝෂණය",
+    "contactFeedback": "සම්බන්ධතා/ප්‍රතිපෝෂණය",
+    "aboutApp": "මෙම යෙදුම ගැන",
     "signOut": "ඉවත් වන්න",
     "logout": "ඉවත් වන්න",
     "logoutConfirm": "ඔබට ඇත්තටම ඉවත් වීමට අවශ්‍යද?",
@@ -22,7 +24,37 @@
     "submit": "ඉදිරිපත් කරන්න",
     "submitting": "ඉදිරිපත් කරමින්...",
     "success": "ඔබේ ප්‍රතිපෝෂණයට ස්තූතියි!",
-    "error": "ප්‍රතිපෝෂණය ඉදිරිපත් කිරීමට අසමත් විය। කරුණාකර නැවත උත්සාහ කරන්න।"
+    "error": "ප්‍රතිපෝෂණය ඉදිරිපත් කිරීමට අසමත් විය। කරුණාකර නැවත උත්සාහ කරන්න।",
+    "loginRequired": "ප්‍රතිපෝෂණය ඉදිරිපත් කිරීමට කරුණාකර පිවිසෙන්න"
+  },
+  "about": {
+    "title": "මෙම යෙදුම ගැන",
+    "appName": "සායි බාබා අද්භූත",
+    "version": "අනුවාදය",
+    "tagline": "සායි භක්තයන් සඳහා අද්භූත සහ අත්දැකීම් බෙදාගැනීමට සේවාවක්.",
+    "mission": {
+      "title": "මෙහෙවර",
+      "content": "මෙම යෙදුම සායි බාබා භක්තයන්ගේ ගෝලීය ප්‍රජාවට කැපවූ ලාභ නොලබන, ලාභ නොලබන ව්‍යාපෘතියකි. ශ්‍රී සායිගේ ලීලා (අද්භූත) ලියාපදිංචි කිරීමට සහ බෙදාගැනීමට වේදිකාවක් සැපයීම අපගේ අරමුණයි."
+    },
+    "credits": {
+      "title": "ක්‍රෙඩිට් (මූලාශ්‍ර ද්‍රව්‍ය)",
+      "content": "ශ්‍රී සායි සච්චරිත්‍රයේ PDF අනුවාද ෂිර්ඩි ශ්‍රී සායි බාබා සංස්ථාන ට්‍රස්ට් විසින් ප්‍රකාශයට පත් කරන ලද අනුවාද වලින් ලබාගෙන ඇත. අපි මුල් කතෘ ගෝවින්ද් රඝුනාත් දාභෝල්කර් (හේමාද්පන්ත්) වෙත ක්‍රෙඩිට් දෙමු."
+    },
+    "noAds": {
+      "title": "නො-ප්‍රචාරක ප්‍රතිපත්තිය",
+      "content": "මෙම යෙදුම සම්පූර්ණයෙන්ම නොමිලේ වන අතර කිසිදු ප්‍රචාරණයක් ධාවනය නොකරන අතර කිසිදු ආදායමක් උත්පාදනය නොකරයි. එය සම්පූර්ණයෙන්ම භක්තිමත් සේවාවකි."
+    },
+    "disclaimer": {
+      "title": "අවලංගු කිරීම",
+      "content": "පොත්වල සියලුම හිමිකම් මුල් ප්‍රකාශකයන් සතු වේ. ඔබ කොපිරයිට් හිමිකරුවෙක් නම් සහ අවධානයන් තිබේ නම්, කරුණාකර අප හා සම්බන්ධ වන්න."
+    }
+  },
+  "book": {
+    "title": "ශ්‍රී සායි සච්චරිත්‍ර",
+    "loadingPdf": "PDF පූරණය වෙමින්...",
+    "loadError": "PDF පූරණය කිරීමට අසමත් විය",
+    "loadErrorSubtext": "කරුණාකර PDF ගොනුව පවතින බවට විශ්වාස කරන්න",
+    "disclaimer": "PDF භක්තිමත් අධ්‍යයනය සඳහා සපයනු ලැබේ. ක්‍රෙඩිට්: ෂිර්ඩි ශ්‍රී සායි බාබා සංස්ථාන ට්‍රස්ට්। සම්පූර්ණ නීතිමය අවලංගු කිරීම සඳහා 'සැකසීම් > මෙම යෙදුම ගැන' බලන්න."
   },
   "common": {
     "loading": "පූරණය වෙමින්...",
