--- a/src/i18n/locales/ta.json
+++ b/src/i18n/locales/ta.json
@@ -11,6 +11,8 @@
     "lightMode": "ஒளி பயன்முறை",
     "preferredLanguage": "விருப்பமான மொழி",
     "feedback": "கருத்து",
+    "contactFeedback": "தொடர்பு/கருத்து",
+    "aboutApp": "இந்த பயன்பாட்டைப் பற்றி",
     "signOut": "வெளியேறு",
     "logout": "வெளியேறு",
     "logoutConfirm": "நீங்கள் உறுதியாக வெளியேற விரும்புகிறீர்களா?",
@@ -22,7 +24,37 @@
     "submit": "சமர்ப்பி",
     "submitting": "சமர்ப்பிக்கப்படுகிறது...",
     "success": "உங்கள் கருத்துக்கு நன்றி!",
-    "error": "கருத்தை சமர்ப்பிக்க முடியவில்லை। தயவுசெய்து மீண்டும் முயற்சிக்கவும்।"
+    "error": "கருத்தை சமர்ப்பிக்க முடியவில்லை। தயவுசெய்து மீண்டும் முயற்சிக்கவும்।",
+    "loginRequired": "கருத்து சமர்ப்பிக்க தயவுசெய்து உள்நுழையவும்"
+  },
+  "about": {
+    "title": "இந்த பயன்பாட்டைப் பற்றி",
+    "appName": "சாய் பாபா அதிசயங்கள்",
+    "version": "பதிப்பு",
+    "tagline": "சாய் பக்தர்கள் அதிசயங்கள் மற்றும் அனுபவங்களைப் பகிர்வதற்கான ஒரு சேவா.",
+    "mission": {
+      "title": "திட்டம்",
+      "content": "இந்த பயன்பாடு சாய் பாபா பக்தர்களின் உலகளாவிய சமூகத்திற்காக அர்ப்பணிக்கப்பட்ட ஒரு வணிகரீதியற்ற, இலாப நோக்கற்ற திட்டமாகும். ஸ்ரீ சாயின் லீலாக்களை (அதிசயங்கள்) ஆவணப்படுத்தவும் பகிரவும் ஒரு தளத்தை வழங்குவதே எங்கள் குறிக்கோள்."
+    },
+    "credits": {
+      "title": "கிரெடிட் (மூலப் பொருள்)",
+      "content": "ஸ்ரீ சாய் சத்சரித்ராவின் PDF பதிப்புகள் ஷிர்டியின் ஸ்ரீ சாய் பாபா சன்ஸ்தான் டிரஸ்ட் வெளியிட்ட பதிப்புகளிலிருந்து பெறப்பட்டவை. அசல் ஆசிரியர் கோவிந்த் ராகுனாத் தாபோல்கர் (ஹேமத்பந்த்) அவர்களுக்கு நாங்கள் கிரெடிட் செய்கிறோம்."
+    },
+    "noAds": {
+      "title": "விளம்பர இல்லாத கொள்கை",
+      "content": "இந்த பயன்பாடு முற்றிலும் இலவசமாகவும் எந்தவொரு விளம்பரங்களையும் இயக்கவில்லை அல்லது எந்தவொரு வருவாயையும் ஈட்டவில்லை. இது முற்றிலும் ஒரு பக்தி சேவையாகும்."
+    },
+    "disclaimer": {
+      "title": "மறுப்பு",
+      "content": "புத்தகங்களுக்கான அனைத்து உரிமைகளும் அசல் பதிப்பாளர்களிடம் உள்ளன. நீங்கள் ஒரு பதிப்புரிமை வைத்திருந்தால் மற்றும் கவலைகள் இருந்தால், தயவுசெய்து எங்களைத் தொடர்பு கொள்ளவும்."
+    }
+  },
+  "book": {
+    "title": "ஸ்ரீ சாய் சத்சரித்ரா",
+    "loadingPdf": "PDF ஏற்றுகிறது...",
+    "loadError": "PDF ஏற்ற முடியவில்லை",
+    "loadErrorSubtext": "தயவுசெய்து PDF கோப்பு உள்ளதா என்பதை உறுதிப்படுத்தவும்",
+    "disclaimer": "பக்தி ஆய்வுக்காக PDF கள் வழங்கப்படுகின்றன. கிரெடிட்: ஷிர்டி ஸ்ரீ சாய் பாபா சன்ஸ்தான் டிரஸ்ட். முழு சட்ட மறுப்பிற்கு 'அமைப்புகள் > இந்த பயன்பாட்டைப் பற்றி' பார்க்கவும்."
   },
   "common": {
     "loading": "ஏற்றுகிறது...",
