--- a/src/i18n/locales/te.json
+++ b/src/i18n/locales/te.json
@@ -11,6 +11,8 @@
     "lightMode": "లైట్ మోడ్",
     "preferredLanguage": "ఇష్టమైన భాష",
     "feedback": "ప్రతిస్పందన",
+    "contactFeedback": "సంప్రదింపు/ప్రతిస్పందన",
+    "aboutApp": "ఈ యాప్ గురించి",
     "signOut": "సైన్ అవుట్",
     "logout": "లాగ్అవుట్",
     "logoutConfirm": "మీరు నిజంగా లాగ్అవుట్ చేయాలనుకుంటున్నారా?",
@@ -22,7 +24,37 @@
     "submit": "సమర్పించండి",
     "submitting": "సమర్పిస్తున్నారు...",
     "success": "మీ ప్రతిస్పందనకు ధన్యవాదాలు!",
-    "error": "ప్రతిస్పందనను సమర్పించడంలో విఫలమైంది। దయచేసి మళ్లీ ప్రయత్నించండి।"
+    "error": "ప్రతిస్పందనను సమర్పించడంలో విఫలమైంది। దయచేసి మళ్లీ ప్రయత్నించండి।",
+    "loginRequired": "ప్రతిస్పందనను సమర్పించడానికి దయచేసి లాగిన్ చేయండి"
+  },
+  "about": {
+    "title": "ఈ యాప్ గురించి",
+    "appName": "సాయి బాబా అద్భుతాలు",
+    "version": "వెర్షన్",
+    "tagline": "సాయి భక్తులకు అద్భుతాలు మరియు అనుభవాలను పంచుకోవడానికి ఒక సేవ।",
+    "mission": {
+      "title": "మిషన్",
+      "content": "ఈ యాప్ సాయి బాబా భక్తుల ప్రపంచ సమాజానికి అంకితం చేయబడిన వాణిజ్యేతర, లాభాపేక్ష లేని ప్రాజెక్ట్. మా లక్ష్యం శ్రీ సాయి యొక్క లీలలను (అద్భుతాలు) డాక్యుమెంట్ చేసి పంచుకోవడానికి ఒక వేదికను అందించడం."
+    },
+    "credits": {
+      "title": "క్రెడిట్ (మూల పదార్థం)",
+      "content": "శ్రీ సాయి సచ్చరిత్ర యొక్క PDF సంస్కరణలు షిర్డీలోని శ్రీ సాయి బాబా సంస్థాన్ ట్రస్ట్ ప్రచురించిన సంస్కరణల నుండి పొందబడ్డాయి. మేము అసలు రచయిత గోవింద్ రఘునాథ్ దాభోల్కర్ (హేమాద్పంత్)కు క్రెడిట్ ఇస్తాము."
+    },
+    "noAds": {
+      "title": "నో-అడ్స్ పాలసీ",
+      "content": "ఈ యాప్ పూర్తిగా ఉచితం మరియు ఎటువంటి ప్రకటనలను అమలు చేయదు లేదా ఎటువంటి ఆదాయాన్ని ఉత్పత్తి చేయదు. ఇది పూర్తిగా భక్తి సేవ."
+    },
+    "disclaimer": {
+      "title": "నిరాకరణ",
+      "content": "పుస్తకాలకు సంబంధించిన అన్ని హక్కులు అసలు ప్రచురణకర్తలకు చెందినవి. మీరు కాపీరైట్ హోల్డర్ అయితే మరియు ఆందోళనలు ఉంటే, దయచేసి మాకు సంప్రదించండి."
+    }
+  },
+  "book": {
+    "title": "శ్రీ సాయి సచ్చరిత్ర",
+    "loadingPdf": "PDF లోడ్ అవుతోంది...",
+    "loadError": "PDF లోడ్ చేయడంలో విఫలమైంది",
+    "loadErrorSubtext": "దయచేసి PDF ఫైల్ ఉందని నిర్ధారించండి",
+    "disclaimer": "PDFలు భక్తి అధ్యయనం కోసం అందించబడ్డాయి. క్రెడిట్: షిర్డీ శ్రీ సాయి బాబా సంస్థాన్ ట్రస్ట్। పూర్తి చట్టపరమైన నిరాకరణ కోసం 'సెట్టింగ్‌లు > ఈ యాప్ గురించి' చూడండి।"
   },
   "common": {
     "loading": "లోడ్ అవుతోంది...",
