--- a/src/i18n/locales/ur.json
+++ b/src/i18n/locales/ur.json
@@ -11,6 +11,8 @@
     "lightMode": "لائٹ موڈ",
     "preferredLanguage": "ترجیحی زبان",
     "feedback": "فیڈ بیک",
+    "contactFeedback": "رابطہ/فیڈ بیک",
+    "aboutApp": "اس ایپ کے بارے میں",
     "signOut": "سائن آؤٹ",
     "logout": "لاگ آؤٹ",
     "logoutConfirm": "کیا آپ واقعی لاگ آؤٹ کرنا چاہتے ہیں؟",
@@ -22,7 +24,37 @@
     "submit": "جمع کریں",
     "submitting": "جمع کیا جا رہا ہے...",
     "success": "آپ کے فیڈ بیک کا شکریہ!",
-    "error": "فیڈ بیک جمع کرنے میں ناکام۔ براہ کرم دوبارہ کوشش کریں۔"
+    "error": "فیڈ بیک جمع کرنے میں ناکام۔ براہ کرم دوبارہ کوشش کریں۔",
+    "loginRequired": "فیڈ بیک جمع کرنے کے لیے براہ کرم لاگ ان کریں"
+  },
+  "about": {
+    "title": "اس ایپ کے بارے میں",
+    "appName": "سائی بابا معجزات",
+    "version": "ورژن",
+    "tagline": "سائی بھگتوں کے لیے معجزات اور تجربات شیئر کرنے کی ایک سیوا۔",
+    "mission": {
+      "title": "مشن",
+      "content": "یہ ایپ سائی بابا بھگتوں کی عالمی برادری کے لیے وقف ایک غیر تجارتی، غیر منافع بخش منصوبہ ہے۔ ہمارا مقصد شری سائی کی لیلاؤں (معجزات) کو دستاویزی شکل دینا اور شیئر کرنے کے لیے ایک پلیٹ فارم فراہم کرنا ہے۔"
+    },
+    "credits": {
+      "title": "کریڈٹ (ماخذ مواد)",
+      "content": "شری سائی سچاریترا کے PDF ورژن شردی کے شری سائی بابا سنستھان ٹرسٹ کے ذریعہ شائع کردہ ایڈیشنز سے حاصل کیے گئے ہیں۔ ہم اصل مصنف گووند رگھوناتھ دابھولکر (ہیمادپنت) کو کریڈٹ دیتے ہیں۔"
+    },
+    "noAds": {
+      "title": "نو-ایڈز پالیسی",
+      "content": "یہ ایپ مکمل طور پر مفت ہے اور کوئی اشتہارات نہیں چلاتا یا کوئی آمدنی پیدا نہیں کرتا۔ یہ مکمل طور پر ایک بھکتی سیوا ہے۔"
+    },
+    "disclaimer": {
+      "title": "انکار",
+      "content": "کتابوں کے تمام حقوق اصل ناشروں کے پاس رہتے ہیں۔ اگر آپ کاپی رائٹ ہولڈر ہیں اور تشویش ہے، تو براہ کرم ہم سے رابطہ کریں۔"
+    }
+  },
+  "book": {
+    "title": "شری سائی سچاریترا",
+    "loadingPdf": "PDF لوڈ ہو رہا ہے...",
+    "loadError": "PDF لوڈ کرنے میں ناکام",
+    "loadErrorSubtext": "براہ کرم یقینی بنائیں کہ PDF فائل موجود ہے",
+    "disclaimer": "PDF بھکتی مطالعہ کے لیے فراہم کیے گئے ہیں۔ کریڈٹ: شردی شری سائی بابا سنستھان ٹرسٹ۔ مکمل قانونی انکار کے لیے 'ترتیبات > اس ایپ کے بارے میں' دیکھیں۔"
   },
   "common": {
     "loading": "لوڈ ہو رہا ہے...",
