--- a/src/i18n/locales/pa.json
+++ b/src/i18n/locales/pa.json
@@ -11,6 +11,8 @@
     "lightMode": "ਲਾਈਟ ਮੋਡ",
     "preferredLanguage": "ਪਸੰਦੀਦਾ ਭਾਸ਼ਾ",
     "feedback": "ਫੀਡਬੈਕ",
+    "contactFeedback": "ਸੰਪਰਕ/ਫੀਡਬੈਕ",
+    "aboutApp": "ਇਸ ਐਪ ਬਾਰੇ",
     "signOut": "ਸਾਈਨ ਆਉਟ",
     "logout": "ਲਾਗਆਉਟ",
     "logoutConfirm": "ਕੀ ਤੁਸੀਂ ਯਕੀਨਨ ਲਾਗਆਉਟ ਕਰਨਾ ਚਾਹੁੰਦੇ ਹੋ?",
@@ -22,7 +24,37 @@
     "submit": "ਜਮ੍ਹਾ ਕਰੋ",
     "submitting": "ਜਮ੍ਹਾ ਕੀਤਾ ਜਾ ਰਿਹਾ ਹੈ...",
     "success": "ਤੁਹਾਡੇ ਫੀਡਬੈਕ ਲਈ ਧੰਨਵਾਦ!",
-    "error": "ਫੀਡਬੈਕ ਜਮ੍ਹਾ ਕਰਨ ਵਿੱਚ ਅਸਫਲ। ਕਿਰਪਾ ਕਰਕੇ ਦੁਬਾਰਾ ਕੋਸ਼ਿਸ਼ ਕਰੋ।"
+    "error": "ਫੀਡਬੈਕ ਜਮ੍ਹਾ ਕਰਨ ਵਿੱਚ ਅਸਫਲ। ਕਿਰਪਾ ਕਰਕੇ ਦੁਬਾਰਾ ਕੋਸ਼ਿਸ਼ ਕਰੋ।",
+    "loginRequired": "ਫੀਡਬੈਕ ਜਮ੍ਹਾ ਕਰਨ ਲਈ ਕਿਰਪਾ ਕਰਕੇ ਲਾਗਇਨ ਕਰੋ"
+  },
+  "about": {
+    "title": "ਇਸ ਐਪ ਬਾਰੇ",
+    "appName": "ਸਾਈ ਬਾਬਾ ਚਮਤਕਾਰ",
+    "version": "ਵਰਜ਼ਨ",
+    "tagline": "ਸਾਈ ਭਗਤਾਂ ਲਈ ਚਮਤਕਾਰ ਅਤੇ ਤਜਰਬੇ ਸਾਂਝੇ ਕਰਨ ਲਈ ਇੱਕ ਸੇਵਾ।",
+    "mission": {
+      "title": "ਮਿਸ਼ਨ",
+      "content": "ਇਹ ਐਪ ਸਾਈ ਬਾਬਾ ਭਗਤਾਂ ਦੇ ਵਿਸ਼ਵਵਿਆਪੀ ਸਮੁਦਾਇ ਲਈ ਸਮਰਪਿਤ ਇੱਕ ਗੈਰ-ਵਪਾਰਕ, ਗੈਰ-ਲਾਭਕਾਰੀ ਪ੍ਰੋਜੈਕਟ ਹੈ। ਸ਼੍ਰੀ ਸਾਈ ਦੀਆਂ ਲੀਲਾਵਾਂ (ਚਮਤਕਾਰ) ਦਸਤਾਵੇਜ਼ੀਕਰਨ ਅਤੇ ਸਾਂਝੇ ਕਰਨ ਲਈ ਇੱਕ ਪਲੇਟਫਾਰਮ ਪ੍ਰਦਾਨ ਕਰਨਾ ਸਾਡਾ ਟੀਚਾ ਹੈ।"
+    },
+    "credits": {
+      "title": "ਕ੍ਰੈਡਿਟ (ਸਰੋਤ ਸਮੱਗਰੀ)",
+      "content": "ਸ਼੍ਰੀ ਸਾਈ ਸਚਰਿਤਰ ਦੇ PDF ਸੰਸਕਰਣ ਸ਼ਿਰਡੀ ਦੇ ਸ਼੍ਰੀ ਸਾਈ ਬਾਬਾ ਸੰਸਥਾਨ ਟਰੱਸਟ ਦੁਆਰਾ ਪ੍ਰਕਾਸ਼ਿਤ ਸੰਸਕਰਣਾਂ ਤੋਂ ਪ੍ਰਾਪਤ ਕੀਤੇ ਗਏ ਹਨ। ਅਸੀਂ ਮੂਲ ਲੇਖਕ ਗੋਵਿੰਦ ਰਘੁਨਾਥ ਦਾਭੋਲਕਰ (ਹੇਮਾਦਪੰਤ) ਨੂੰ ਕ੍ਰੈਡਿਟ ਦਿੰਦੇ ਹਾਂ।"
+    },
+    "noAds": {
+      "title": "ਨੋ-ਐਡਸ ਪਾਲਸੀ",
+      "content": "ਇਹ ਐਪ ਪੂਰੀ ਤਰ੍ਹਾਂ ਮੁਫ਼ਤ ਹੈ ਅਤੇ ਕੋਈ ਵਿਗਿਆਪਨ ਨਹੀਂ ਚਲਾਉਂਦਾ ਜਾਂ ਕੋਈ ਆਮਦਨੀ ਪੈਦਾ ਨਹੀਂ ਕਰਦਾ। ਇਹ ਪੂਰੀ ਤਰ੍ਹਾਂ ਇੱਕ ਭਗਤੀ ਸੇਵਾ ਹੈ।"
+    },
+    "disclaimer": {
+      "title": "ਅਸਵੀਕਾਰ",
+      "content": "ਕਿਤਾਬਾਂ ਦੇ ਸਾਰੇ ਅਧਿਕਾਰ ਮੂਲ ਪ੍ਰਕਾਸ਼ਕਾਂ ਕੋਲ ਰਹਿੰਦੇ ਹਨ। ਜੇ ਤੁਸੀਂ ਕਾਪੀਰਾਈਟ ਧਾਰਕ ਹੋ ਅਤੇ ਚਿੰਤਾਵਾਂ ਹਨ, ਤਾਂ ਕਿਰਪਾ ਕਰਕੇ ਸਾਡੇ ਨਾਲ ਸੰਪਰਕ ਕਰੋ।"
+    }
+  },
+  "book": {
+    "title": "ਸ਼੍ਰੀ ਸਾਈ ਸਚਰਿਤਰ",
+    "loadingPdf": "PDF ਲੋਡ ਹੋ ਰਿਹਾ ਹੈ...",
+    "loadError": "PDF ਲੋਡ ਕਰਨ ਵਿੱਚ ਅਸਫਲ",
+    "loadErrorSubtext": "ਕਿਰਪਾ ਕਰਕੇ ਯਕੀਨੀ ਬਣਾਓ ਕਿ PDF ਫਾਈਲ ਮੌਜੂਦ ਹੈ",
+    "disclaimer": "PDF ਭਗਤੀ ਅਧਿਐਨ ਲਈ ਪ੍ਰਦਾਨ ਕੀਤੇ ਗਏ ਹਨ। ਕ੍ਰੈਡਿਟ: ਸ਼ਿਰਡੀ ਸ਼੍ਰੀ ਸਾਈ ਬਾਬਾ ਸੰਸਥਾਨ ਟਰੱਸਟ। ਪੂਰੀ ਕਾਨੂੰਨੀ ਅਸਵੀਕਾਰ ਲਈ 'ਸੈਟਿੰਗਾਂ > ਇਸ ਐਪ ਬਾਰੇ' ਦੇਖੋ।"
   },
   "common": {
     "loading": "ਲੋਡ ਹੋ ਰਿਹਾ ਹੈ...",
